--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,56 @@
-# Virtualenvs / local env
-.venv/
-venv/
-.env
-
-# Python cache / tooling
+# Python
 __pycache__/
-*.pyc
-.pytest_cache/
-.mypy_cache/
-.cache/
-
-# Editors / OS
-.DS_Store
-.vscode/
-
-# Project logs / data captures
-logs/
-data/
-
-# Node / misc (future-proofing)
-node_modules/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
 dist/
 build/
+.eggs/
+.venv/
+venv/
+ENV/
+env/
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/*.log
+logs/*.jsonl
+run.log
+
+# Data
+data/
+*.db
+*.sqlite
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+.dockerignore
+
+# Secrets (never commit!)
+secrets/
+*.pem
+*.key
+*.crt
