Add test scripts and verify critical fixes
- Add test_critical_fixes.py: Unit tests for SelfTradeGuard, inventory, order tracking
- Add test_cancel_discipline.py: Cancel discipline throttling test
- Add TEST_RESULTS.md: Test results summary
- Disable replay and chaos by default in config.yaml
- All critical fixes verified and working correctly

--- a/config.yaml
+++ b/config.yaml
@@ -32,12 +32,12 @@ optimizer:
   w_funding: 1.0
   w_oi: 0.2
 replay:
-  enabled: true
+  enabled: false
   market_filter: []
   path: logs/ws_raw.jsonl
   speed: 1.0
 chaos:
-  enabled: true
+  enabled: false
   latency:
     enabled: true
     probability: 0.3
