--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ api:
   key: ''
   secret: ''
 app:
-  log_level: DEBUG
+  log_level: INFO
   name: lighter-bot
 capture:
   raw_path: logs/ws_raw.jsonl
