Throttle mid-price logging

--- a/config.production.yaml.example
+++ b/config.production.yaml.example
@@ -66,6 +66,7 @@ ws:
   channels:
     - "market_stats/all"
   auth_token: ${WS_AUTH_TOKEN:}
+  log_mid_interval_s: 1.0  # throttle mid-price INFO logs (seconds between entries)
 
 # Capture (optional - can disable for production)
 capture:
