--- a/config.production.yaml.example
+++ b/config.production.yaml.example
@@ -8,8 +8,11 @@ app:
 # API Configuration (use environment variables in production)
 api:
   base_url: ${API_BASE_URL}
-  key: ${API_KEY}
-  secret: ${API_SECRET}
+  key: ${API_KEY_PRIVATE_KEY}
+  account_index: ${ACCOUNT_INDEX}
+  api_key_index: ${API_KEY_INDEX}
+  max_api_key_index: ${MAX_API_KEY_INDEX:-}
+  nonce_management: ${NONCE_MANAGEMENT:-}
 
 # Maker Configuration
 maker:
@@ -18,6 +21,8 @@ maker:
   spread_bps: 8
   size: 5
   post_only: true
+  price_scale: 100            # Example: 2 decimal places
+  size_scale: 1000000         # Example: 1e6 (depends on instrument)
   limits:
     max_cancels: 60
     max_latency_ms: 2000
