--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ pyyaml==6.0.2
 uvloop==0.20.0; sys_platform == 'linux'
 rich==13.9.4
 structlog==24.4.0
+git+https://github.com/elliottech/lighter-python.git
