--- a/config.yaml
+++ b/config.yaml
@@ -73,8 +73,8 @@ watchdogs:
 guard:
   price_band_bps: 50
   crossed_book_protection: true
-  max_position_units: 0.01
-  max_inventory_notional: 1000
+  max_position_units: 0.21        # ~3 order fills at 0.07 SOL each
+  max_inventory_notional: 35      # roughly $35 notional cap
   kill_on_crossed_book: true
   kill_on_inventory_breach: true
   backoff_seconds_on_block: 2
