Add account listener debug option

--- a/config.production.yaml.example
+++ b/config.production.yaml.example
@@ -79,6 +79,7 @@ ws:
   log_mid_interval_s: 1.0  # throttle mid-price INFO logs (seconds between entries)
 account_listener:
   enabled: true
+  debug: true
   ws:
     url: ${WS_URL}
     auth_token: ${WS_AUTH_TOKEN:}
