--- a/railway.env.example
+++ b/railway.env.example
@@ -20,13 +20,13 @@ NONCE_MANAGEMENT=OPTIMISTIC
 
 # ── Maker settings ─────────────────────────────────────────────────────────
 MAKER_DRY_RUN=true
-MAKER_PAIR=market:1
-MAKER_SIZE=0.001
+MAKER_PAIR=market:2
+MAKER_SIZE=0.07
 MAKER_SPREAD_BPS=10
 MAKER_REFRESH_SECONDS=5
 MAKER_RANDOMIZE_BPS=4
-MAKER_PRICE_SCALE=100
-MAKER_SIZE_SCALE=1000000
+MAKER_PRICE_SCALE=10
+MAKER_SIZE_SCALE=100000
 MAKER_LIMITS_MAX_CANCELS=30
 MAKER_LIMITS_MAX_LATENCY_MS=2000
 
@@ -35,8 +35,8 @@ ALERTS_ENABLED=true
 DISCORD_WEBHOOK=
 GUARD_PRICE_BAND_BPS=50
 GUARD_CROSSED_BOOK_PROTECTION=true
-GUARD_MAX_POSITION_UNITS=0.01
-GUARD_MAX_INVENTORY_NOTIONAL=1000
+GUARD_MAX_POSITION_UNITS=0.25
+GUARD_MAX_INVENTORY_NOTIONAL=50
 GUARD_KILL_ON_CROSSED_BOOK=true
 GUARD_KILL_ON_INVENTORY_BREACH=true
 GUARD_BACKOFF_SECONDS_ON_BLOCK=2
