Add automated hedger for inventory drift

--- a/railway.env.example
+++ b/railway.env.example
@@ -30,6 +30,20 @@ MAKER_SIZE_SCALE=100000
 MAKER_LIMITS_MAX_CANCELS=30
 MAKER_LIMITS_MAX_LATENCY_MS=2000
 
+# ── Hedger settings ──────────────────────────────────────────────────────────
+HEDGER_ENABLED=true
+HEDGER_DRY_RUN=false
+HEDGER_MARKET=market:2
+HEDGER_TRIGGER_UNITS=0.18
+HEDGER_TRIGGER_NOTIONAL=30
+HEDGER_TARGET_UNITS=0.04
+HEDGER_MAX_CLIP_UNITS=0.07
+HEDGER_PRICE_OFFSET_BPS=10
+HEDGER_POLL_INTERVAL_SECONDS=1.0
+HEDGER_COOLDOWN_SECONDS=5.0
+HEDGER_MAX_ATTEMPTS=3
+HEDGER_RETRY_BACKOFF_SECONDS=2.0
+
 # ── Guardrails / alerts ───────────────────────────────────────────────────
 ALERTS_ENABLED=true
 DISCORD_WEBHOOK=
