--- a/config.production.yaml.example
+++ b/config.production.yaml.example
@@ -26,6 +26,19 @@ maker:
   limits:
     max_cancels: 60
     max_latency_ms: 2000
+hedger:
+  enabled: true
+  dry_run: false
+  market: "market:1"
+  trigger_units: 0.18
+  trigger_notional: 30
+  target_units: 0.04
+  max_clip_units: 0.07
+  price_offset_bps: 10
+  poll_interval_seconds: 1.0
+  cooldown_seconds: 5.0
+  max_attempts: 3
+  retry_backoff_seconds: 2.0
 
 # Optimizer
 optimizer:
