--- a/config.yaml
+++ b/config.yaml
@@ -25,6 +25,19 @@ maker:
   spread_bps: 10
   price_scale: 1       # Override with instrument-specific scaler (e.g. 100)
   size_scale: 1        # Override with instrument-specific scaler (e.g. 1e6)
+hedger:
+  enabled: true
+  dry_run: false             # follow maker.dry_run when deploying live
+  market: market:2
+  trigger_units: 0.18        # start hedging once exposure exceeds ~0.18 SOL
+  trigger_notional: 30       # optional notional trigger (~$30)
+  target_units: 0.04         # leave small tolerance before re-quoting
+  max_clip_units: 0.07       # hedge one maker clip at a time
+  price_offset_bps: 10       # cross the spread by 10 bps for fast fill
+  poll_interval_seconds: 1.0
+  cooldown_seconds: 5.0
+  max_attempts: 3
+  retry_backoff_seconds: 2.0
 optimizer:
   hysteresis_score_margin: 0.05
   max_spread_bps: 25
