--- a/railway.env.example
+++ b/railway.env.example
@@ -44,6 +44,12 @@ HEDGER_COOLDOWN_SECONDS=5.0
 HEDGER_MAX_ATTEMPTS=3
 HEDGER_RETRY_BACKOFF_SECONDS=2.0
 
+# ── Fee assumptions ──────────────────────────────────────────────────────────
+FEES_MAKER_ACTUAL_RATE=0.0
+FEES_TAKER_ACTUAL_RATE=0.0
+FEES_MAKER_PREMIUM_RATE=0.00002
+FEES_TAKER_PREMIUM_RATE=0.0002
+
 # ── Guardrails / alerts ───────────────────────────────────────────────────
 ALERTS_ENABLED=true
 DISCORD_WEBHOOK=
