--- a/config.yaml
+++ b/config.yaml
@@ -31,11 +31,11 @@ hedger:
   market: market:2
   trigger_units: 0.24        # allow inventory to build closer to guard cap before hedging
   trigger_notional: 30       # hedge once drift exceeds ~$30 notional
-  target_units: 0.18         # leave room so we don't keep re-hedging tiny fills
+  target_units: 0.05         # drive inventory toward flat
   max_clip_units: 0.07       # hedge one maker clip at a time
-  price_offset_bps: 10       # cross the spread by 10 bps for fast fill
+  price_offset_bps: 25       # cross the spread aggressively to ensure fills
   poll_interval_seconds: 1.0
-  cooldown_seconds: 30.0
+  cooldown_seconds: 5.0
   max_attempts: 3
   retry_backoff_seconds: 2.0
 fees:
