--- a/config.yaml
+++ b/config.yaml
@@ -29,13 +29,13 @@ hedger:
   enabled: true
   dry_run: false             # temporarily enable live hedging for fee data
   market: market:2
-  trigger_units: 0.24        # allow inventory to build closer to guard cap before hedging
-  trigger_notional: 30       # hedge once drift exceeds ~$30 notional
-  target_units: 0.05         # drive inventory toward flat
-  max_clip_units: 0.07       # hedge one maker clip at a time
-  price_offset_bps: 25       # cross the spread aggressively to ensure fills
+  trigger_units: 0.16        # tighten hedge trigger to reduce taker drag
+  trigger_notional: 20       # act once drift exceeds ~$20 notional
+  target_units: 0.02         # drive inventory closer to flat
+  max_clip_units: 0.05       # hedge one maker clip at a time
+  price_offset_bps: 9        # cross just enough to fill without huge slippage
   poll_interval_seconds: 1.0
-  cooldown_seconds: 5.0
+  cooldown_seconds: 7.0
   max_attempts: 3
   retry_backoff_seconds: 2.0
 fees:
@@ -89,13 +89,13 @@ watchdogs:
   reminder_every_seconds: 300
   ws_stale_seconds: 30
 guard:
-  price_band_bps: 50
+  price_band_bps: 35
   crossed_book_protection: true
-  max_position_units: 0.25        # allow ~0.25 SOL (≈$40) cushion before kill-switch
-  max_inventory_notional: 50      # cap notional exposure around $50
+  max_position_units: 0.18        # allow ~0.18 SOL (~$30) cushion before kill-switch
+  max_inventory_notional: 35      # cap notional exposure around $35
   kill_on_crossed_book: true
   kill_on_inventory_breach: true
-  backoff_seconds_on_block: 2
+  backoff_seconds_on_block: 5
 ws:
   fallback_on_fail: true
   max_failures: 3
