--- a/config.yaml
+++ b/config.yaml
@@ -21,13 +21,14 @@ maker:
     max_latency_ms: 2000
   loop_delay: 2
   pair: market:1
-  size: 0.0008
-  size_min: 0.0010
-  size_max: 0.0016
+  size: 0.01
+  size_min: 0.01
+  size_max: 0.018
+  exchange_min_size: 0.01
   inventory_soft_cap: 0.08
   spread_bps: 12
   price_scale: 1       # Override with instrument-specific scaler (e.g. 100)
-  size_scale: 1        # Override with instrument-specific scaler (e.g. 1e6)
+  size_scale: 1000000        # Exchange uses 1e6 base precision
 hedger:
   enabled: true
   dry_run: false             # temporarily enable live hedging for fee data
