--- a/config.yaml
+++ b/config.yaml
@@ -29,6 +29,17 @@ maker:
   spread_bps: 7
   price_scale: 1       # Override with instrument-specific scaler (e.g. 100)
   size_scale: 1000        # Exchange uses 1e3 base precision
+  volatility:
+    enabled: true
+    low_bps: 5
+    high_bps: 25
+    ema_halflife_seconds: 30
+    min_spread_bps: 5
+    max_spread_bps: 14
+    min_size_multiplier: 0.5
+    max_size_multiplier: 1.0
+    pause_threshold_bps: 35
+    resume_threshold_bps: 20
 hedger:
   enabled: true
   dry_run: false             # temporarily enable live hedging for fee data
