--- a/config.yaml
+++ b/config.yaml
@@ -41,12 +41,18 @@ maker:
     pause_threshold_bps: 30
     resume_threshold_bps: 18
     resume_inventory_ratio: 0.25
+    high_vol_threshold_bps: 9
+    high_vol_size_multiplier: 0.85
   trend:
     enabled: true
     lookback_seconds: 45
     threshold_bps: 12
+    down_threshold_bps: 6
     resume_threshold_bps: 6
     extra_spread_bps: 2.5
+    down_extra_spread_bps: 6.0
+    down_bias: ask
+    down_cooldown_seconds: 45
     inventory_soft_cap_ratio: 0.6
   exchange_min_notional: 10.5
   pnl_guard:
@@ -64,19 +70,20 @@ hedger:
   enabled: true
   dry_run: false
   market: market:2
-  trigger_units: 0.07
+  trigger_units: 0.05
   trigger_notional: 7.0
-  target_units: 0.03
-  max_clip_units: 0.08
-  price_offset_bps: 6
-  max_slippage_bps: 7
+  target_units: 0.02
+  max_clip_units: 0.11
+  price_offset_bps: 10
+  max_slippage_bps: 12
   poll_interval_seconds: 1.0
-  cooldown_seconds: 8.0
+  cooldown_seconds: 6.0
   max_attempts: 3
   retry_backoff_seconds: 2.0
   prefer_passive: true
-  passive_wait_seconds: 0.4
+  passive_wait_seconds: 0.25
   passive_offset_bps: 2.0
+  passive_timeout_seconds: 8.0
 fees:
   maker_actual_rate: 0.0
   taker_actual_rate: 0.0
