--- a/config.yaml
+++ b/config.yaml
@@ -56,6 +56,10 @@ maker:
     inventory_soft_cap_ratio: 0.6
   regimes:
     min_dwell_seconds: 60
+    # Volatility threshold for regime switching:
+    # High vol (>= threshold) -> aggressive (better liquidity, fewer hedges needed)
+    # Low vol (< threshold) -> defensive (lower liquidity, need careful hedging)
+    vol_threshold_bps: 8.0
     aggressive:
       size_multiplier: 1.0
       extra_spread_bps: 0.0
