Tighten hedger parameters and add low-volatility pause mode
Based on findings that realized PnL is negative due to high hedging costs:

Hedger tightening:
- max_clip_units: 0.08 -> 0.06 SOL (smaller baseline clips)
- trigger_units: 0.03 -> 0.02 SOL (hedge earlier, prevent buildup)
- target_units: 0.010 -> 0.005 SOL (flatten more aggressively)
- guard_clip_multiplier: 0.40 -> 0.35 (smaller clips when guard active)
- cooldown_seconds: 4.0 -> 3.0s (faster hedging)
- passive_timeout_seconds: 8.0 -> 6.0s (faster timeout)
- guard_emergency_seconds: 10.0 -> 8.0s (earlier emergency)
- guard_emergency_clip_multiplier: 1.2 -> 1.1x (smaller emergency clips)
- trigger_notional: 5.0 -> 4.0 (tighter notional trigger)

Low-volatility pause mode:
- Add low_vol_pause_threshold_bps: 3.0 (pause maker when vol < 3.0 bps)
- Add low_vol_resume_threshold_bps: 4.5 (resume when vol >= 4.5 bps)
- Pause maker during very low volatility to avoid bleeding on hedging costs
- This addresses the finding that low volatility periods (overnight) have worse
  performance due to frequent large hedges

Regime switching:
- vol_threshold_bps: 8.0 -> 6.0 (more aggressive during normal volatility)

Expected impact:
- Smaller clips = lower taker costs
- Earlier hedging = less inventory buildup
- Low-vol pause = avoid bleeding during quiet periods
- Better performance during low-liquidity periods

--- a/config.yaml
+++ b/config.yaml
@@ -43,6 +43,9 @@ maker:
     resume_inventory_ratio: 0.25
     high_vol_threshold_bps: 9
     high_vol_size_multiplier: 0.85
+    # Pause maker during very low volatility to avoid bleeding on hedging
+    low_vol_pause_threshold_bps: 3.0
+    low_vol_resume_threshold_bps: 4.5
   trend:
     enabled: true
     lookback_seconds: 45
@@ -59,7 +62,7 @@ maker:
     # Volatility threshold for regime switching:
     # High vol (>= threshold) -> aggressive (better liquidity, fewer hedges needed)
     # Low vol (< threshold) -> defensive (lower liquidity, need careful hedging)
-    vol_threshold_bps: 8.0
+    vol_threshold_bps: 6.0
     aggressive:
       size_multiplier: 1.0
       extra_spread_bps: 0.0
@@ -84,25 +87,25 @@ hedger:
   enabled: true
   dry_run: false
   market: market:2
-  trigger_units: 0.03
-  trigger_notional: 5.0
-  target_units: 0.010
-  max_clip_units: 0.08
+  trigger_units: 0.02
+  trigger_notional: 4.0
+  target_units: 0.005
+  max_clip_units: 0.06
   price_offset_bps: 10
   max_slippage_bps: 12
   poll_interval_seconds: 1.0
-  cooldown_seconds: 4.0
+  cooldown_seconds: 3.0
   max_attempts: 3
   retry_backoff_seconds: 2.0
   prefer_passive: true
   passive_wait_seconds: 0.25
   passive_offset_bps: 2.0
-  passive_timeout_seconds: 8.0
-  guard_emergency_seconds: 10.0
-  guard_emergency_clip_multiplier: 1.2
+  passive_timeout_seconds: 6.0
+  guard_emergency_seconds: 8.0
+  guard_emergency_clip_multiplier: 1.1
   guard_emergency_extra_bps: 6.0
-  guard_emergency_cooldown_seconds: 0.75
-  guard_clip_multiplier: 0.40
+  guard_emergency_cooldown_seconds: 0.5
+  guard_clip_multiplier: 0.35
   guard_price_offset_bps: 9.0
   guard_max_slippage_bps: 9.0
 fees:
