Adjust volatility thresholds and EMA to align with market conditions
Based on volatility comparison finding (2025-11-13):
- External SOL volatility: 6.18 bps (normal trading conditions)
- Internal bot volatility: 1.96 bps (paused due to low threshold)
- Impact: Bot was paused during normal market conditions, missing opportunities

Changes:
1. Low-vol pause threshold: 3.0 → 4.5 bps
   - Prevents pausing during normal trading conditions (6+ bps)
   - Still pauses at very low volatility (< 4.5 bps)

2. Low-vol resume threshold: 4.5 → 5.5 bps
   - Adds hysteresis gap (1.0 bps) to prevent chattering
   - Resumes when volatility recovers to normal levels

3. EMA half-life: 45s → 35s
   - Faster response to volatility changes
   - Better alignment with external market volatility
   - Reduces lag between internal calculation and market conditions

Expected impact:
- Maker will resume trading when volatility >= 5.5 bps
- Faster response to changing market conditions
- Better alignment with external SOL volatility
- Avoids missing opportunities during normal trading

Reference: docs/analysis/volatility_comparison_2025-11-13.md

--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,9 @@ maker:
     enabled: true
     low_bps: 6
     high_bps: 22
-    ema_halflife_seconds: 45
+    # Shortened from 45s to 35s for faster response to volatility changes
+    # This helps align internal volatility closer to external market volatility
+    ema_halflife_seconds: 35
     min_spread_bps: 7
     max_spread_bps: 13
     min_size_multiplier: 0.7
@@ -44,8 +46,10 @@ maker:
     high_vol_threshold_bps: 9
     high_vol_size_multiplier: 0.85
     # Pause maker during very low volatility to avoid bleeding on hedging
-    low_vol_pause_threshold_bps: 3.0
-    low_vol_resume_threshold_bps: 4.5
+    # Adjusted based on volatility comparison: external SOL vol ~6.18 bps, internal EMA can lag
+    # Raising threshold so we don't pause during normal trading conditions
+    low_vol_pause_threshold_bps: 4.5
+    low_vol_resume_threshold_bps: 5.5
   trend:
     enabled: true
     lookback_seconds: 45
