--- a/config.yaml
+++ b/config.yaml
@@ -48,9 +48,10 @@ maker:
     high_vol_size_multiplier: 0.85
     # Pause maker during very low volatility to avoid bleeding on hedging
     # Adjusted based on volatility comparison: external SOL vol ~6.18 bps, internal EMA can lag
-    # Raising threshold so we don't pause during normal trading conditions
-    low_vol_pause_threshold_bps: 4.5
-    low_vol_resume_threshold_bps: 5.5
+    # Lowered threshold: bot was paused at 0.75bps but should trade in low vol to capture edge
+    # Internal EMA can lag external vol significantly, so be more conservative with pause
+    low_vol_pause_threshold_bps: 2.0
+    low_vol_resume_threshold_bps: 3.0
   trend:
     enabled: true
     lookback_seconds: 45
