Overnight: Widen spreads to 13 bps for conservatism
Conservative change for overnight operation:
- Spread: 12.0 → 13.0 bps (+1 bps, ~8% wider)
- Rationale: Lower liquidity overnight, more edge per fill, less inventory risk
- Impact: Slightly less volume, more edge per trade
- Risk: Low - safe change that won't break anything

With hedger fix deployed and asymmetric quoting active, slightly wider spreads
should help prevent overnight inventory buildup while maintaining edge.

Will evaluate in morning based on:
- UI PnL trend
- Inventory levels
- Hedger activity
- PnL guard frequency

--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ maker:
   exchange_min_size: 0.061
   # Lower soft cap to trigger earlier (findings: inventory buildup causes bleed)
   inventory_soft_cap: 0.05
-  spread_bps: 12.0
+  spread_bps: 13.0  # Widened slightly for overnight conservatism (was 12.0)
   price_scale: 1000
   size_scale: 1000
   volatility:
