--- a/config.yaml
+++ b/config.yaml
@@ -99,16 +99,16 @@ hedger:
   dry_run: false
   market: market:2
   # Hedge even earlier to prevent inventory buildup (findings: inventory = bleed, correlation -1.0)
-  trigger_units: 0.010  # Hedge earlier (was 0.015)
+  trigger_units: 0.008  # Hedge earlier to prevent buildup (was 0.010, overnight: inventory still building to 0.075)
   trigger_notional: 4.0
   # Nearly flat target to reduce residual inventory (findings: any inventory costs money)
-  target_units: 0.001  # Nearly flat (was 0.003)
+  target_units: 0.0005  # Flatter target (was 0.001)
   # Smaller max clip to reduce large crosses (findings: large crosses cost $16-18 each)
   max_clip_units: 0.03  # Smaller clips (was 0.04)
   price_offset_bps: 10
   max_slippage_bps: 12
   poll_interval_seconds: 1.0
-  cooldown_seconds: 2.0  # Faster response (was 3.0)
+  cooldown_seconds: 1.5  # Faster response to prevent buildup (was 2.0)
   max_attempts: 3
   retry_backoff_seconds: 2.0
   prefer_passive: true
